[package]
name = "salsa-file-watch"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = "0.15.2"
notify = "4.0.15"

[[bin]]
name = "salsa-file-watch"
path = "main.rs"
